examples/test/testpolicy8495.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy8495
  namespace: namespace376
spec:
  podSelector:
    matchLabels:
      key0: value47
      key45: value34
      key4: value36
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key13: value1
          key12: value22
          key46: value22
      podSelector:
        matchLabels:
          key5: value48
          key16: value31
